--- a/web/game.html
+++ b/web/game.html
@@ -70,6 +70,7 @@
           <div class="hidden-xs col-xs-12">
              <div class="mheight">
               <h3>Choose your opponent: </h3>
+              <div id="emptyList">The list is empty! Wait for an opponent or open a new tab and play against yourself ;-)</div>
               <div id="nameslist"></div>
             </div>
           </div>
@@ -80,7 +81,10 @@
           <div class="hidden-xs col-xs-12">
              <div class="mheight">
               Your opponent <span id="opponent_name"></span>
-            </div>
+             </div>
+             <div id="playField">
+                <canvas id="stage" width="600" height="600"></canvas>
+             </div>
           </div>
         </div>
       </div>
