adding a grid structure
first part of the game, without the interaction

--- a/web/game.html
+++ b/web/game.html
@@ -79,7 +79,7 @@
       <div id="game_screen" style="display: none;">
         <div class="row">
           <div class="hidden-xs col-xs-12">
-             <div class="mheight">
+             <div>
               Your opponent <span id="opponent_name"></span>
              </div>
              <div id="playField">
