Countdown in server client; blink in client

--- a/web/game.html
+++ b/web/game.html
@@ -48,6 +48,10 @@
         <div id="status"></div>
       </header>
       <div id="enter_screen">
+       <div id="time">
+      
+       </div>
+      
         <div class="row">
           <div class="col-xs-12 col-md-6">
             <div class="box">
