--- a/web/game.html
+++ b/web/game.html
@@ -48,6 +48,7 @@
         <div id="status"></div>
       </header>
       <div id="enter_screen">
+      
        <div id="time">
       
        </div>
@@ -70,6 +71,7 @@
         </div>
       </div>
       <div id="opponent_screen" style="display: none;">
+            <button id="startButton" type="button">Start!</button>
         <div class="row">
           <div class="hidden-xs col-xs-12">
              <div class="mheight">
