Added random bomb to start and launch; launch button; first start hide starts to others

--- a/web/game.html
+++ b/web/game.html
@@ -78,6 +78,7 @@
               <h3>Choose your opponent: </h3>
               <div id="emptyList">The list is empty! Wait for an opponent or open a new tab and play against yourself ;-)</div>
               <div id="nameslist"></div>
+              <button id="launchButton" type="button">Launch!</button>
             </div>
           </div>
         </div>
