--- a/web/game.html
+++ b/web/game.html
@@ -59,6 +59,10 @@
                 Enter a name:
                 <input class="form-control speak" type="text" value="" id="name" />
             </div>
+                <p>
+        Name:<br>
+<input type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput">
+      </p>
           </div>
         </div>
         <div class="row">
