Image input and preview

--- a/web/game.html
+++ b/web/game.html
@@ -39,6 +39,10 @@
           font-size: 10pt;
           color: #aaa;
         }
+        output {
+       display: block;
+        }
+        
       </style>
   </head>
   <body>
@@ -63,6 +67,8 @@
         Name:<br>
 <input type="file" capture="camera" accept="image/*" id="cameraInput" name="cameraInput">
       </p>
+          <output id="list"></output>
+      
           </div>
         </div>
         <div class="row">
