--- a/web/game.html
+++ b/web/game.html
@@ -12,6 +12,10 @@
       <link href="css/bootflat-extensions.css" rel="stylesheet" media="screen">
       <link href="css/bootflat-square.css" rel="stylesheet" media="screen">
       <style>
+        body {
+          color: #333;
+          background: #eee;
+        }
         #context-wrapper {
           min-height: 400px;
         }
