Game over logic

--- a/web/game.html
+++ b/web/game.html
@@ -93,6 +93,7 @@
               <div id="emptyList">The list is empty! Wait for an opponent or open a new tab and play against yourself ;-)</div>
               <div id="nameslist"></div>
               <button id="launchButton" type="button">Launch!</button>
+              <div id="gameover"></div>
             </div>
           </div>
         </div>
