--- a/web/game.html
+++ b/web/game.html
@@ -71,7 +71,7 @@
       </div>
       <div id="opponent_screen" style="display: none;">
         <div class="row">
-          <div class="hidden-xs col-xs-12">
+          <div class="col-xs-12">
              <div class="mheight">
               <h3>Choose your opponent: </h3>
               <div id="emptyList">The list is empty! Wait for an opponent or open a new tab and play against yourself ;-)</div>
@@ -82,7 +82,7 @@
       </div>
       <div id="game_screen" style="display: none;">
         <div class="row">
-          <div class="hidden-xs col-xs-12">
+          <div class="col-xs-12">
              <div>
               Your opponent <span id="opponent_name"></span>
              </div>
