Theming; right game logic

--- a/web/player_list.html
+++ b/web/player_list.html
@@ -20,6 +20,7 @@
     </style>
 
     <p>Client status {{status}}</p>
+    <div class="time">Time: {{time}}</div>
 
     <core-animated-pages id="pages" on-tap="{{reorder}}" selected="{{selected}}" on-core-animated-pages-transition-end="{{done}}" transitions="hero-transition">
 
