--- a/web/table.html
+++ b/web/table.html
@@ -10,6 +10,7 @@
       <link href="css/bootflat.css" rel="stylesheet" media="screen">
       <link href="css/bootflat-extensions.css" rel="stylesheet" media="screen">
       <link href="css/bootflat-square.css" rel="stylesheet" media="screen">
+      <link href="css/gelati.css" rel="stylesheet" media="screen">
       <style>
         body {
           color: #333;
@@ -53,6 +54,7 @@
   <body>
     <h1>Player List</h1>
     <button id="startButton" type="button">Start!</button>
+    <button id="stopButton" type="button">Stop!</button>
     <div id="status"></div>
     <player-list></player-list>
     <script type="application/dart">export 'package:polymer/init.dart';</script>
