--- a/web/bombemotion_board.html
+++ b/web/bombemotion_board.html
@@ -20,9 +20,6 @@
 <link rel="import" href="../../packages/paper_elements/paper_dialog_transition.html">
 <link rel="import" href="../../packages/paper_elements/paper_action_dialog.html">
 
-<!-- import chess-board -->
-<!--link rel="import" href="../../packages/chessboard/chess_board.html"-->
-
 <polymer-element name="bombemotion-board" attributes="user" layout vertical>
   <template>
     <style>
@@ -91,10 +88,12 @@
       
     }
     </style>
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
+    
     <core-drawer-panel id="drawerPanel" rightDrawer>
       <core-header-panel drawer>
         <div class="leaderboard">
-          <template if="{{challengeOngoing}}" repeat="{{ user in leaderBoard }}">
+          <template repeat="{{ user in leaderBoard }}">
             <div layout horizontal center style="height:40px">
               <core-icon size="40" class="avatar" icon="avatars:avatar-{{user.avatar}}" style="height:40px; width:40px"></core-icon>
               <div layout flex class="leaderboard_name">{{user.name}}</div>
@@ -108,59 +107,19 @@
           <core-icon icon="avatars:avatar-{{user.avatar}}" size="64" class="avatar" style="height: 64px; width: 64px;">
           </core-icon>
           <div flex class="user-name">{{user.name}}</div>
-          <paper-icon-button id="stop_challenge" icon=cancel style="display:none" on-tap="{{stopChallengeClicked}}"></paper-icon-button>
           <paper-icon-button id="about" icon="help" on-tap="{{showAbout}}"></paper-icon-button>
           <paper-icon-button id="navicon" icon="menu"></paper-icon-button>
         </core-toolbar>
         <div class="content">
-          <paper-toast id="try_again" text="Try again..." duration="5000"></paper-toast>
-          <!--chess-board id="chess_board" on-move="{{onMove}}"></chess-board-->
            <div id="playField">
                 <canvas id="stage" class="stage-full-window"></canvas>
              </div>
         </div>
       </core-header-panel>
     </core-drawer-panel>
-    <paper-action-dialog id="result" style="width:80%" heading="Time: {{winnerTime}}" autoCloseDisabled>
-      <div class="leaderboard">
-        <template repeat="{{ user in leaderBoard }}">
-          <div layout horizontal center style="height:40px">
-            <core-icon size="40" class="avatar" icon="avatars:avatar-{{user.avatar}}" style="height:40px; width:40px"></core-icon>
-            <div layout flex class="leaderboard_name">{{user.name}}</div>
-            <div class="leaderboard_score">{{user.score}}</div>
-          </div>
-        </template>
-      </div>
-      <paper-button affirmative autofocus on-tap={{resultOkClicked}}>OK</paper-button>
-    </paper-action-dialog>
-    <paper-action-dialog id="confirm_stop_challenge" heading="Quit Challenge?">
-      <paper-button dismissive>Cancel</paper-button>
-      <paper-button affirmative autofocus on-tap="{{confirmStopChallengeClicked}}">OK</paper-button>
-    </paper-action-dialog>
-    <paper-action-dialog id="start_challenge" heading="New Challenge" autoCloseDisabled>
-      <p>{{startChallengeStatus}}</p>
-      <div class="leaderboard">
-        <template repeat="{{ user in startChallengeUsers }}">
-          <div layout horizontal center style="height:40px">
-            <core-icon size="40" class="avatar" icon="avatars:avatar-{{user.avatar}}" style="height:40px; width:40px"></core-icon>
-            <div layout flex class="leaderboard_name">{{user.name}}</div>
-          </div>
-        </template>
-      </div>
-      <paper-button affirmative autofocus on-tap="{{startChallengeClicked}}">{{startChallengeBtnLabel}}</paper-button>
-    </paper-action-dialog>
-    <paper-toast id="challenge_pending" duration="10000" text="Get ready, challenge starts soon..."></paper-toast>
-    <paper-action-dialog id="connection_error" heading="Error" autoCloseDisabled>
-      <p>Server communication error.</p>
-      <p>{{errorMessage}}</p>
-      <paper-button affirmative autofocus on-tap={{connectionRetryClicked}}>Retry</paper-button>
-    </paper-action-dialog>
-    <paper-action-dialog id="about_dialog" heading="About ChessChallenge">
+    <paper-action-dialog id="about_dialog" heading="About Bombemotion">
       <ul>
-        <li>Make the checkmate move as fast as possible</li>
-        <li>Challenge yourself or other users</li>
-        <li>The first who completes five problems wins!</li>
-        <li>The fastest players are shown to the right</li>
+        <li>Tap the bomb and throw it away</li>
       </ul>
       <paper-button affirmative autofocus>OK</paper-button>
     </paper-action-dialog>
