Updating images loading, Safari problem solved

--- a/web/bombemotion_board.html
+++ b/web/bombemotion_board.html
@@ -111,6 +111,7 @@
           <paper-icon-button id="navicon" icon="menu"></paper-icon-button>
         </core-toolbar>
         <div class="content">
+                  <div flex class="user-name">{{counter}}</div>
            <div id="playField">
                 <canvas id="stage" class="stage-full-window"></canvas>
              </div>
